# fin-track-pro

./: .gitignore  README.md  debug_notion.py  get_chat_id.py  main.py  pyproject.toml  requirements.txt
